don't serialize default primitive values & fix 'is' prefix fields serialization & fit upstream field names